--- a/style.css
+++ b/style.css
@@ -64,6 +64,12 @@ html, body {
 	justify-items: center;
 }
 
+@media only screen and (max-width: 600px) {
+  .container {
+    margin: 7.5vh 1vw 0 1vw;
+  }
+}
+
 .todo-template {
 	display: none;
 }
